Added a meta tag for keywords and some keywords.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Assignment #08 | Index</title>
 	<link rel="stylesheet" href="main.css">
+	<meta name="keywords" content="favorite things to do, read book, top 5 books, 2001: A Space Odyssey, We Have Always Lived in the Castle, Dune, Invisible Monsters, Neuromancer, exercise, be with dogs">
+	<meta name="description" content=""> 
 </head>
 <body>
 	<header>
