I added a description meta tag with some content.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Assignment #08 | Index</title>
 	<link rel="stylesheet" href="main.css">
 	<meta name="keywords" content="favorite things to do, read book, top 5 books, 2001: A Space Odyssey, We Have Always Lived in the Castle, Dune, Invisible Monsters, Neuromancer, exercise, be with dogs">
-	<meta name="description" content=""> 
+	<meta name="description" content="This page is about some of my favorite things I like to do like reading and my top 5, exercise, and hang out with my dogs.">
 </head>
 <body>
 	<header>
