--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 <body>
 	<header>
-		<div class="large-text"><strong>Welcome to my website!</strong></span></div>
+		<h1>Welcome to my website!</h1>
 		<br>
-		<img src="images/welcome.jpg">
+		<img src="images/welcome.jpg" alt="A picture of a neon welcome sign.">
 	</header>
 
 	<main>
-		<div class="medium-text">My favorite things</div>
+		<h2>My favorite things</h2>
 		<div class="favorite-thing">
 			<h3>Reading</h3>
 			<p>I try to read at least 30 minutes every day. I read to relax before bed and on my lunch breaks. I enjoy science fiction, horror, and satirical fiction. My favorite authors are Chuck Palahniuk, Shirley Jackson, and Arthur C. Clarke.</p>
 		
-			<strong>Top 5 books</strong>
+			<h4>Top 5 books</h4>
 			<p>Here is a list of my top 5 books in no particular order:</p>
 			<table>
 				<tr>
@@ -72,7 +72,7 @@
 		<div class="favorite-thing">
 			<h3>Spending Time With My Dogs</h3>
 			<p>I love spending time with my dogs. I take them to the dog park every Saturday and my wife and we take them on trips with us to dog-friendly locations whenever we can find a weekend to get away. They are very spoiled and we consider them a part of our family.</p>
-			<img src="images/ourpups.jpg">
+			<img src="images/ourpups.jpg" alt="A picture of my two dogs sitting down on top of the couch.">
 		</div>
 	
 		<div id="contact">
