I changed the link text to actually say where will you be going.

--- a/index.html
+++ b/index.html
@@ -35,31 +35,31 @@
 					<td>2001: A Space Odyssey</td>
 					<td>Arthur C. Clarke</td>
 					<td>256</td>
-					<td><a href="https://www.amazon.com/gp/product/0143111574">https://www.amazon.com/gp/product/0143111574</a></td>
+					<td><a href="https://www.amazon.com/gp/product/0143111574">This link is to Purchase the Book.</a></td>
 				</tr>
 				<tr>
 					<td>We Have Always Lived in the Castle</td>
 					<td>Shirley Jackson</td>
 					<td>146</td>
-					<td><a href="https://www.amazon.com/gp/product/0143039970/">https://www.amazon.com/gp/product/0143039970/</a></td>
+					<td><a href="https://www.amazon.com/gp/product/0143039970/">This link is to Purchase the Book.</a></td>
 				</tr>
 				<tr>
 					<td>Dune</td>
 					<td>Frank Herbert</td>
 					<td>720</td>
-					<td><a href="https://www.amazon.com/d/0143111582/">https://www.amazon.com/d/0143111582/</a></td>
+					<td><a href="https://www.amazon.com/d/0143111582/">This link is to Purchase the Book.</a></td>
 				</tr>
 				<tr>
 					<td>Invisible Monsters</td>
 					<td>Chuck Palahniuk</td>
 					<td>304</td>
-					<td><a href="https://www.amazon.com/gp/product/0393355950">https://www.amazon.com/gp/product/0393355950</a></td>
+					<td><a href="https://www.amazon.com/gp/product/0393355950">This link is to Purchase the Book.</a></td>
 				</tr>
 				<tr>
 					<td>Neuromancer</td>
 					<td>William Gibson</td>
 					<td>304</td>
-					<td><a href="https://www.amazon.com/gp/product/0143111604">https://www.amazon.com/gp/product/0143111604</a></td>
+					<td><a href="https://www.amazon.com/gp/product/0143111604">This link is to Purchase the Book.</a></td>
 				</tr>
 			</table>
 		</div>
@@ -77,7 +77,7 @@
 	
 		<div id="contact">
 			<h3>Contact Me</h3>
-			<p>Use this form to contact me about anything: <a href="form.html">Click here</a></p>
+			<p>Use this form to contact me about anything <a href="form.html">click here to fill out the form.</a></p>
 		</div>
 	</main>
 
