--- a/form.html
+++ b/form.html
@@ -8,13 +8,17 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	Go back to the main page by <a href="index.html">clicking here</a>
+	<h1><a href="index.html">Click here to go back to main page.</a></h1>
 	<!-- This form doesn't actually go anywhere - don't worry about that, 
 		just fix the accessibility-related issues! -->
-	<form>
-		<p>Name: <input id="name" type="text"></p>
-		<p>Message:<br><textarea id="message"></textarea></p>
-		<p><button>Submit</button></p>
-	</form>
+		
+		<form id="submit" action="index.html" method="post">
+			<label for="name"><b>Enter your name here:</b></label><br>
+			<input name="name" id="name" required><br>
+			<label for="message"><b>Leave a Message here:</b></label><br>
+			<textarea name="message" id="message" cols="70" rows="10"
+				placeholder="Please leave your message here."></textarea><br>
+			<input class="submit" type="submit" id="button" value="Submit">
+		</form>
 </body>
 </html>
